--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Lakeshia's Updated Portfolio</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" media="screen" href="assets/css/styles.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
 </head>
 
 <body>
