--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <div class="header-logo">
-            <img src="https://github.com/FENDdeveloperkei/2nddraft-logo/blob/master/4th%20logo.PNG?raw=true.jpg/70x70" alt="Lakeshia Williams" class="header-img responsive-img text-item" />
+            <img src="https://github.com/FENDdeveloperkei/updated-portfolio/blob/master/LSW%20LOGO%202.PNG?raw=true.jpg/50x60" alt="Lakeshia Williams" class="header-img responsive-img text-item" />
         </div>
         <div class="header-text">
             <h1 class="header-name text-hdr">Lakeshia Williams</h1>
