--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
         <section class="featured-work">
             <h2 class="content-hdr text-hdr">My Featured Work</h2>
             <div class="featured">
-                <div class="featured-item">
+                <div class="item-1">
                     <img src="https://github.com/FENDdeveloperkei/updated-portfolio/blob/master/prokick1.PNG?raw=true" alt="featured-image-one" class="featured-item responsive-img text-item" />
                     <h3 class="featured-hdr text-hdr">Children's Book Series</h3>
                     <p class="featured-text">My 1st & 2nd published book in my first series titled, "Abeni's Amazing Adventures". Meet Abeni Allen! The cute and curious 4 year old who is ready 
 			    to learn all about the Amazing World around her. Interested in purchasing ? please click the links below 
-                        <a href="http://www.blurb.com/user/AbenisMom/" class="featured-link">Book Copies</a>
+                    <a href="http://www.blurb.com/user/AbenisMom/" class="featured-link">Book Copies</a>
                     </p>
                 </div>
-                <div class="featured-item">
+                <div class="item-2">
                     <img src="https://github.com/FENDdeveloperkei/updated-portfolio/blob/master/my%20pixel%20art%20page.PNG?raw=true" alt="featured-image-two" class="featured-item responsive-img text-item" />
                     <h3 class="featured-hdr text-hdr">My Pixel Art Maker</h3>
                     <p class="featured-text">While learning to be a web-developer is pretty incredible! Being able to see the code I've written transform into interactive content, doesn't get 
 			    any better than that right? Check out a few of the projects I've learned & created since beginning the Grow w/ Google Scholaship Challenge at Udacity, HERE
-                        <a href="https://codepen.io/lswwebdevlpr/full/bvmWWe/" class="featured-link">Art Maker</a>
+                    <a href="https://codepen.io/lswwebdevlpr/full/bvmWWe/" class="featured-link">Art Maker</a>
                     </p>
                 </div>
-                <div class="featured-item">
+                <div class="item-3">
                     <img src="https://github.com/FENDdeveloperkei/updated-portfolio/blob/master/ywnetwork_logo.jpg.PNG?raw=true" alt="featured-image-three" class="featured-item responsive-img text-item" />
                     <h3 class="featured-hdr text-hdr">Writer's Network Organization</h3>
                     <p class="featured-text"> A writer's community organization that I started late 2018, that reposts networking & career advancement opportunities, while supporting up and coming writers in their creative efforts
-                        <a href="https://twitter.com/YOWriterNetwork/" class="featured-link">Purchase a Blurb Copy</a>
+                    <a href="https://twitter.com/YOWriterNetwork/" class="featured-link">Purchase a Blurb Copy</a>
                     </p>
                 </div>
             </div>
